--- a/index.html
+++ b/index.html
@@ -4,24 +4,21 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
+  <title>QKRes</title>
   <!-- css -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.css">
   <link rel="stylesheet" href="css/main.css">
-  <!--link rel="stylesheet" href="css/mbr-additional.css"-->
   <!-- js -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.js" integrity="sha512-E378bwaeZf1nwXeJGIwTB58A5gPt5jFU3u6aTGja4ZdRFJeo/N/REKnBgNZOZlH6JdnOPO98vg2AnSGaNfCMFQ==" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r123/three.js" integrity="sha512-8Yom5spEjD3HeZTNoDiOm4Y4Rn3RVKUFpiqTM4I3RIIO0u8e2m7XjT5rG1GQNHJlVcD9EZrzn+itENl4C6112A==" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.7/dat.gui.js" integrity="sha512-u+vtyZDzyd0zgAEffKfoNx2BnCahAOBBYvzGu6vma1B18zQ6lEGF3F6dAFvqaxDoIU/GZRxcXV5oq23OIrkQwg==" crossorigin="anonymous"></script>
   <!-- fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Barlow&display=swap" rel="stylesheet">
   <!-- fontawesome -->
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   <link rel="shortcut icon" href="images/favicon.ico">
@@ -37,7 +34,7 @@
           <h1 class="mbr-section-title mbr-regular pb-3 align-left mbr-fonts-style mbr-bold display-1">DONT WAIT !!</h1>
         </div>
         <div class="col-xl-3 align-center d-flex flex-column">
-          <div class="align-left mbr-section-btn">
+          <div class="mbr-section-btn">
             <a class="btn btn-md btn-primary diplay-7" href="#">Explore Now</a>
           </div>
         </div>
@@ -45,7 +42,40 @@
     </div>
   </section>
 
-<section class="part-03" id="header-03">
+<section class="part-07" id="header-07" >
+    <div class="container">
+      <div class="row main-row">
+        <div class="text-content mb-4 col-sm-7 col-lg-8">
+          <h2 class="mb-4 mbr-fonts-style mbr-section-title display-2">About Us</h2>
+          <h3 class="mbr-fonts-style mbr-text align-left mbr-light display-7">
+            QkRes Technologies and Research is a research
+             resources and consultancy based start-up setup
+            by an IIT Madras student, currently located
+            at IIT Madras. We are Engaged in:</h3>
+          <div class="list counter-container col-12  display-6">
+            <ul>
+              <li>
+                Offering quick, reliable services for <strong>R&D</strong> based requirements.
+              </li>
+              <li>
+                Procuring instruments for Research labs  and Startups.
+              </li>
+              <li>
+                Providing a helping hand for innovative researchers.
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="mbr-figure col-sm-5 col-lg-4" >
+          <div id="first" data-aos="fade-left">
+            <img class="himg" src="svg/03.svg" alt="qkres Info svg">
+          </div>
+        </div>
+      </div>
+    </div>
+</section>
+
+<section class="part-03" id="header-03" data-aos="fade-up">
   <div class="container d-flex flex-column">
     <ul class="nav nav-tabs mb-5 justify-content-center" role ="tablist">
       <li class="nav-item first mbr-section-btn">
@@ -62,77 +92,65 @@
         <div class="row justify-content-center mx-2">
           <div class="card col-12 col-md-8 col-lg-4">
             <div class="card-img">
-              <h4 class="price align-right display-3"><br>Manufacturing
-                <br>& fabrication
-              </h4>
+              <h4 class="price display-2">
+                <br>Manufacturing
+                <br>& fabrication</h4>
               <img src="flaticon/conveyor.svg" alt="Mobirise">
-            </div>
-            <div class="card-box">
-              <div class="align-left mbr-section-btn">
+              <div class="mbr-section-btn">
                 <a class="btn btn-md btn-primary display-7" href="#">Know More</a>
               </div>
             </div>
           </div>
           <div class="card col-12 col-md-8 col-lg-4">
             <div class="card-img">
-              <h4 class="price align-right display-3"><br>
+              <h4 class="price display-2">
                 <br>3D-Printing</h4>
               <img src="flaticon/3d-printing.svg" alt="Mobirise">
-            </div>
-            <div class="card-box">
-              <div class="align-left mbr-section-btn">
+              <div class="mbr-section-btn">
                 <a class="btn btn-md btn-primary display-7" href="#">Know More</a>
               </div>
             </div>
           </div>
           <div class="card col-12 col-md-8 col-lg-4">
             <div class="card-img">
-              <h4 class="price align-right display-3"><br>
+              <h4 class="price align-right display-2">
                 <br>Consultancy</h4>
               <img src="flaticon/hand-shake.svg" alt="Mobirise">
-            </div>
-            <div class="card-box">
-              <div class="align-left mbr-section-btn">
+              <div class="mbr-section-btn">
                 <a class="btn btn-md btn-primary display-7" href="#">Know More</a>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div id ="tabs01-s_tab1" class="tab-pane" role="tabpanel">
+      <div id ="tabs01-s_tab1" class="tab-pane fade" role="tabpanel">
         <div class="row justify-content-center mx-2">
           <div class="card col-12 col-md-8 col-lg-4">
             <div class="card-img">
-              <h4 class="price align-right display-3"><br>
+              <h4 class="price align-right display-2"><br>
                 <br>Chemicals</h4>
               <img src="flaticon/chem.svg" alt="Mobirise">
-            </div>
-            <div class="card-box">
-              <div class="align-left mbr-section-btn">
+              <div class="mbr-section-btn">
                 <a class="btn btn-md btn-primary display-7" href="#">Know More</a>
               </div>
             </div>
           </div>
           <div class="card col-12 col-md-8 col-lg-4">
             <div class="card-img">
-              <h4 class="price align-right display-3"><br>
+              <h4 class="price align-right display-2"><br>
                 <br>Mechanicals</h4>
               <img src="flaticon/mech.svg" alt="Mobirise">
-            </div>
-            <div class="card-box">
-              <div class="align-left mbr-section-btn">
+              <div class="mbr-section-btn">
                 <a class="btn btn-md btn-primary display-7" href="#">Know More</a>
               </div>
             </div>
           </div>
           <div class="card col-12 col-md-8 col-lg-4">
             <div class="card-img">
-              <h4 class="price align-right display-3"><br>
+              <h4 class="price align-right display-2"><br>
                 <br>Electricals</h4>
               <img src="flaticon/electric.svg" alt="Mobirise">
-            </div>
-            <div class="card-box">
-              <div class="align-left mbr-section-btn">
+              <div class="mbr-section-btn">
                 <a class="btn btn-md btn-primary display-7" href="#">Know More</a>
               </div>
             </div>
@@ -142,6 +160,11 @@
     </div>
   </div>
 </section>
+
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 
 </body>
 </html>
