--- a/index.html
+++ b/index.html
@@ -26,6 +26,24 @@
 
 <body>
 
+  <section class="part-01" id="header-01">
+    <div class="container-fluid">
+        <div class="d1">
+          <div class="row main-row">
+            <h1 class="title-content align-left  pb-4">QkRes</h1>
+          </div>
+        </div>
+        <div class="d2"</div>
+        <div class="d3">
+          <h1 class="title-content-2 align-right pb-4">Don't Wait !!</h1>
+          <div class="align-left home-section-btn">
+              <a class="btn btn-md btn-primary display-7" href="#">Explore Now</a>
+          </div>
+        </div>
+        <div class="d4"></div>
+    </div>
+  </section>
+
 <section class="part-07" id="header-07" >
     <div class="container">
       <div class="row main-row">
