--- a/index.html
+++ b/index.html
@@ -27,16 +27,91 @@
 
 <body>
 
+  <div class="container-fluid">
+    <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
+
+       <div id="icon">
+          <a class="navbar-brand" href="/"> <img class="img-fluid" src="/images/Qkres_logo.png" alt=""> </a>
+       </div>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">
+                QkRes Technology and Research<span class="sr-only">(current)</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link home" href="/"> <img style="height: 20px;" src="images/home.svg" alt="home"> </i></a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="font-weight:bold;">Services</a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
+                <a class="dropdown-item" href="consultancy.html">Consultancy</a>
+                <a class="dropdown-item" href="3d_printing.html">3D Printing</a>
+                <a class="dropdown-item" href="manufacturing.html">Manufacturing and Fabrics</a>
+              </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="font-weight:bold;">
+                Material &amp; Resources
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
+                <a class="dropdown-item" href="/chem">Chemicals &amp; Equipments</a>
+                <a class="dropdown-item" href="/elec">Electrical Equipments</a>
+                <a class="dropdown-item" href="/mech">Mechanical Equipments</a>
+              </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown3" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="font-weight:bold;">
+                More
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown3">
+                <a class="dropdown-item" href="bSoPP.html">Business Opportunities</a>
+                <a class="dropdown-item" href="About.html">About Us</a>
+              </div>
+            </li>
+            <li class="nav-item" id="cart">
+              <div >
+                <a id="cart_link"   class="nav-link d-flex p-2" href="/cart"  >
+                    <span style="color: red;" id="cartCounter" class="px-2"> </span>
+                   <img  style="height: 25px;"  src="images/shopping-cart.svg" alt="cart-logo">
+                 </a>
+              </div>
+           </li>
+          </ul>
+
+       <span>  <a class="mx-2" href="/profile">  <img style="height: 25px;" src="/images/user.svg" alt=""> </i></a>
+       </span>
+
+
+        <a role="button" class="sign btn btn-sm btn-outline-success" href="/register">Sign Up</a>
+        <a role="button" class="sign btn btn-sm btn-outline-success" href="/login">Log In</a>
+
+
+        </div>
+         <div class="progress-container">
+          <div class="progress-bar" id="myBar" ></div>
+        </div>
+      </nav>
+
+  </div>
+
   <section class="part-01" id="header-01">
     <div class="container-fluid">
         <div class="d1">
           <div class="row main-row">
-            <h1 class="title-content align-left  pb-4">QkRes</h1>
+            <h1 class="title-content align-left  pb-4"><span>Research
+              <br>Stress ??</span></h1>
           </div>
         </div>
         <div class="d2"</div>
         <div class="d3">
-          <h1 class="title-content-2 align-right pb-4">Don't Wait !!</h1>
+          <h1 class="title-content-2 align-right pb-4"></h1>
           <div class="align-left home-section-btn">
               <a class="btn btn-md btn-primary display-7" href="#">Explore Now</a>
           </div>
@@ -45,38 +120,38 @@
     </div>
   </section>
 
-<section class="part-07" id="header-07" >
-    <div class="container">
-      <div class="row main-row">
-        <div class="text-content mb-4 col-sm-7 col-lg-8">
-          <h2 class="mb-4 mbr-fonts-style mbr-section-title display-2">About Us</h2>
-          <h3 class="mbr-fonts-style mbr-text align-left mbr-light display-7">
-            QkRes Technologies and Research is a research
-             resources and consultancy based start-up setup
-            by an IIT Madras student, currently located
-            at IIT Madras. We are Engaged in:</h3>
-          <div class="list counter-container col-12  display-6">
-            <ul>
-              <li>
-                Offering quick, reliable services for <strong>R&D</strong> based requirements.
-              </li>
-              <li>
-                Procuring instruments for Research labs  and Startups.
-              </li>
-              <li>
-                Providing a helping hand for innovative researchers.
-              </li>
-            </ul>
+  <section class="part-07" id="header-07" >
+      <div class="container">
+        <div class="row main-row">
+          <div class="text-content mb-4 col-sm-7 col-lg-8">
+            <h2 class="mb-4 mbr-fonts-style mbr-section-title display-2">About Us</h2>
+            <h3 class="mbr-fonts-style mbr-text align-left mbr-light display-7">
+              QkRes Technologies and Research is a research
+               resources and consultancy based start-up setup
+              by an IIT Madras student, currently located
+              at IIT Madras. We are Engaged in:</h3>
+            <div class="list counter-container col-12  display-6">
+              <ul>
+                <li>
+                  Offering quick, reliable services for <strong>R&D</strong> based requirements.
+                </li>
+                <li>
+                  Procuring instruments for Research labs  and Startups.
+                </li>
+                <li>
+                  Providing a helping hand for innovative researchers.
+                </li>
+              </ul>
+            </div>
           </div>
-        </div>
-        <div class="mbr-figure col-sm-5 col-lg-4" >
-          <div id="first" data-aos="fade-left">
-            <img class="himg" src="svg/03.svg" alt="qkres Info svg">
+          <div class="mbr-figure col-sm-5 col-lg-4" >
+            <div id="first" data-aos="fade-left">
+              <img class="himg" src="svg/03.svg" alt="qkres Info svg">
+            </div>
           </div>
         </div>
       </div>
-    </div>
-</section>
+  </section>
 
 <section class="part-03" id="header-03" data-aos="fade-up">
   <div class="container d-flex flex-column">
@@ -164,6 +239,52 @@
   </div>
 </section>
 
+<footer id="end">
+  <div class="foo">
+    <div class="foo-box">
+      <h5><i><img src="images/Qkres_logo.png" alt="logo" />kRes</i></h5>
+      <div class="social-media">
+        <div class="button">
+          <div class="icon">
+            <a target="_blank" role="button" href="https://www.facebook.com/QkResTechnologies">
+              <i class="fab fa-facebook-f"></i></a>
+          </div>
+        </div>
+        <div class="button">
+          <div class="icon">
+            <a target="_blank" href="https://mobile.twitter.com/QkRes_Tec">
+              <i class="fab fa-twitter"></i></a>
+          </div>
+        </div>
+        <div class="button">
+          <div class="icon">
+            <a target="_blank" href="https://www.linkedin.com/mwlite/in/qkres-technologies-and-research-a25a571b1">
+              <i class="fab fa-linkedin"></i></a>
+          </div>
+        </div>
+        <div class="button">
+          <div class="icon">
+            <a target="_blank" href="https://youtu.be/tuZgM-r5hXI">
+              <i  class="fab fa-youtube"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="box-2">
+        <h4>Location</h4>
+      </div>
+      <div class="box-3">
+        <p><b>IIT Madras</b></p>
+        <p>Chennai, 600036</p>
+        <a target="_blank" href="https://www.google.com/maps/place/Indian+Institute+of+Technology+Madras/@12.9914929,80.2336907,15z/data=!4m5!3m4!1s0x0:0x24ef264085e6a094!8m2!3d12.9914929!4d80.2336907"><i
+            class="fas fa-map-marker-alt fa-2x"></i></a>
+      </div>
+       <br><p>Copyright © 2020 QkRes Technologies and Research</p>
+    </div>
+
+  </div>
+</footer>
+
+<script src="js/elecEquip.js" charset="utf-8"></script>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script>
   AOS.init();
