Commit Message #files modified #main.css #index.html

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
 </head>
 
 <body>
+  <div id="particles-js">
+    <canvas class="particles-js-canvas-el" width="1266" height="3750" style="width: 100%; height: 100%;">
+    </canvas>
+  </div>
 
   <div class="container-fluid">
     <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
@@ -124,8 +128,8 @@
       <div class="container">
         <div class="row main-row">
           <div class="text-content mb-4 col-sm-7 col-lg-8">
-            <h2 class="mb-4 mbr-fonts-style mbr-section-title display-2">About Us</h2>
-            <h3 class="mbr-fonts-style mbr-text align-left mbr-light display-7">
+            <h2 class="heading1 mb-4 mbr-section-title display-2">About Us</h2>
+            <h3 class="mbr-text display-7">
               QkRes Technologies and Research is a research
                resources and consultancy based start-up setup
               by an IIT Madras student, currently located
@@ -285,6 +289,8 @@
 </footer>
 
 <script src="js/elecEquip.js" charset="utf-8"></script>
+<script src="js/particle.min.js" charset="utf-8"></script>
+<script src="js/apply.js" charset="utf-8"></script>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script>
   AOS.init();
