Commit Message #files modified #index.html

--- a/index.html
+++ b/index.html
@@ -157,91 +157,101 @@
       </div>
   </section>
 
-<section class="part-03" id="header-03" data-aos="fade-up">
-  <div class="container d-flex flex-column">
-    <ul class="nav nav-tabs mb-5 justify-content-center" role ="tablist">
-      <li class="nav-item first mbr-section-btn">
-        <a class="mbr-fonts-style btn show btn-md display-6 active" role="tabs"
-        data-toggle="tab" href="#tabs01-s_tab0" aria-selected="true">FACILITIES AND SERVICES</a>
-      </li>
-      <li class="nav-item mbr-section-btn">
-        <a class="mbr-fonts-style btn btn-md display-6" role="tab"
-        data-toggle="tab" href="#tabs01-s_tab1" aria-selected="true">MATERIAL RESOURCES</a>
-      </li>
-    </ul>
-    <div class="tab-content">
-      <div id ="tabs01-s_tab0" class="tab-pane active" role="tabpanel">
-        <div class="row justify-content-center mx-2">
-          <div class="card col-12 col-md-8 col-lg-4">
-            <div class="card-img">
-              <h4 class="price display-2">
-                <br>Manufacturing
-                <br>& fabrication</h4>
-              <img src="flaticon/conveyor.svg" alt="Mobirise">
-              <div class="mbr-section-btn">
-                <a class="btn btn-md btn-primary display-7" href="#">Know More</a>
+  <section class="part-03" id="header-03" data-aos="fade-up">
+    <div class="container d-flex flex-column">
+      <ul class="nav nav-tabs mb-5 justify-content-center" role ="tablist">
+        <li class="nav-item first mbr-section-btn">
+          <a class="mbr-fonts-style btn show btn-md display-6 active" role="tabs"
+          data-toggle="tab" href="#tabs01-s_tab0" aria-selected="true">FACILITIES AND SERVICES</a>
+        </li>
+        <li class="nav-item mbr-section-btn">
+          <a class="mbr-fonts-style btn btn-md display-6" role="tab"
+          data-toggle="tab" href="#tabs01-s_tab1" aria-selected="true">MATERIAL RESOURCES</a>
+        </li>
+      </ul>
+      <div class="tab-content">
+        <div id ="tabs01-s_tab0" class="tab-pane active" role="tabpanel">
+          <div class="row justify-content-center mx-2">
+            <div class="card col-12 col-md-8 col-lg-6">
+              <div class="card-img">
+                <h4 class="price display-2">
+                  <br>Manufacturing
+                  <br>& fabrication</h4>
+                <img src="flaticon/conveyor.svg" alt="Mobirise">
+                <div class="mbr-section-btn">
+                  <a class="btn btn-md btn-primary display-7" href="#">Know More</a>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="card col-12 col-md-8 col-lg-4">
-            <div class="card-img">
-              <h4 class="price display-2">
-                <br>3D-Printing</h4>
-              <img src="flaticon/3d-printing.svg" alt="Mobirise">
-              <div class="mbr-section-btn">
-                <a class="btn btn-md btn-primary display-7" href="#">Know More</a>
+            <div class="card col-12 col-md-8 col-lg-6">
+              <div class="card-img">
+                <h4 class="price display-2">
+                  <br>3D-Printing</h4>
+                <img src="flaticon/3d-printing.svg" alt="Mobirise">
+                <div class="mbr-section-btn">
+                  <a class="btn btn-md btn-primary display-7" href="#">Know More</a>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="card col-12 col-md-8 col-lg-4">
-            <div class="card-img">
-              <h4 class="price align-right display-2">
-                <br>Consultancy</h4>
-              <img src="flaticon/hand-shake.svg" alt="Mobirise">
-              <div class="mbr-section-btn">
-                <a class="btn btn-md btn-primary display-7" href="#">Know More</a>
+            <div class="card col-12 col-md-8 col-lg-6">
+              <div class="card-img">
+                <h4 class="price align-right display-2">
+                  <br>Consultancy</h4>
+                <img src="flaticon/hand-shake.svg" alt="Mobirise">
+                <div class="mbr-section-btn">
+                  <a class="btn btn-md btn-primary display-7" href="#">Know More</a>
+                </div>
+              </div>
+            </div>
+            <div class="card col-12 col-md-8 col-lg-6">
+              <div class="card-img">
+                <h4 class="price align-right display-2">
+                  <br>Mechanical Services</h4>
+                <img src="flaticon/manufacture.svg" alt="Mobirise">
+                <div class="mbr-section-btn">
+                  <a class="btn btn-md btn-primary display-7" href="#">Know More</a>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div id ="tabs01-s_tab1" class="tab-pane fade" role="tabpanel">
-        <div class="row justify-content-center mx-2">
-          <div class="card col-12 col-md-8 col-lg-4">
-            <div class="card-img">
-              <h4 class="price align-right display-2"><br>
-                <br>Chemicals</h4>
-              <img src="flaticon/chem.svg" alt="Mobirise">
-              <div class="mbr-section-btn">
-                <a class="btn btn-md btn-primary display-7" href="#">Know More</a>
+        <div id ="tabs01-s_tab1" class="tab-pane fade" role="tabpanel">
+          <div class="row justify-content-center mx-2">
+            <div class="card col-12 col-md-8 col-lg-4">
+              <div class="card-img">
+                <h4 class="price align-right display-2"><br>
+                  <br>Chemicals</h4>
+                <img src="flaticon/chem.svg" alt="Mobirise">
+                <div class="mbr-section-btn">
+                  <a class="btn btn-md btn-primary display-7" href="#">Know More</a>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="card col-12 col-md-8 col-lg-4">
-            <div class="card-img">
-              <h4 class="price align-right display-2"><br>
-                <br>Mechanicals</h4>
-              <img src="flaticon/mech.svg" alt="Mobirise">
-              <div class="mbr-section-btn">
-                <a class="btn btn-md btn-primary display-7" href="#">Know More</a>
+            <div class="card col-12 col-md-8 col-lg-4">
+              <div class="card-img">
+                <h4 class="price align-right display-2"><br>
+                  <br>Mechanicals</h4>
+                <img src="flaticon/mech.svg" alt="Mobirise">
+                <div class="mbr-section-btn">
+                  <a class="btn btn-md btn-primary display-7" href="#">Know More</a>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="card col-12 col-md-8 col-lg-4">
-            <div class="card-img">
-              <h4 class="price align-right display-2"><br>
-                <br>Electricals</h4>
-              <img src="flaticon/electric.svg" alt="Mobirise">
-              <div class="mbr-section-btn">
-                <a class="btn btn-md btn-primary display-7" href="#">Know More</a>
+            <div class="card col-12 col-md-8 col-lg-4">
+              <div class="card-img">
+                <h4 class="price align-right display-2"><br>
+                  <br>Electricals</h4>
+                <img src="flaticon/electric.svg" alt="Mobirise">
+                <div class="mbr-section-btn">
+                  <a class="btn btn-md btn-primary display-7" href="#">Know More</a>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
 <footer id="end">
   <div class="foo">
