Commit Message #files modified #index.html

--- a/index.html
+++ b/index.html
@@ -206,7 +206,8 @@
             <div class="card col-12 col-md-8 col-lg-6">
               <div class="card-img">
                 <h4 class="price align-right display-2">
-                  <br>Mechanical Services</h4>
+                  <br>Mechanical
+                  <br>Services</h4>
                 <img src="flaticon/manufacture.svg" alt="Mobirise">
                 <div class="mbr-section-btn">
                   <a class="btn btn-md btn-primary display-7" href="#">Know More</a>
