Commmit Message #files modified #main.css #index.html

--- a/index.html
+++ b/index.html
@@ -109,18 +109,44 @@
     <div class="container-fluid">
         <div class="d1">
           <div class="row main-row">
-            <h1 class="title-content align-left  pb-4"><span>Research
+            <h1 class="title-content align-left pb-4 display-2"><span>Research
               <br>Stress ??</span></h1>
           </div>
         </div>
         <div class="d2"</div>
         <div class="d3">
-          <h1 class="title-content-2 align-right pb-4"></h1>
-          <div class="align-left home-section-btn">
-              <a class="btn btn-md btn-primary display-7" href="#">Explore Now</a>
+          <div class="title col-lg-12 col-md-12">
+            <h1 class="title-content-2 align-right pb-4">Reach
+            <span> QkRes</span></h1>
+            <div class="align-left home-section-btn">
+                <a class="btn btn-md btn-primary display-7" href="#">Explore Now</a>
+            </div>
           </div>
         </div>
-        <div class="d4"></div>
+        <div class="d4">
+          <div class="row main-row">
+            <div class="img-card col-12 col-lg-8 col-md-4">
+              <div class="img-icons">
+                <img src="flaticon/machine.svg" alt="QkRes_icons">
+              </div>
+            </div>
+            <div class="img-card col-12 col-lg-8 col-md-4">
+              <div class="img-icons">
+                <img src="flaticon/test1.svg" alt="QkRes_icons">
+              </div>
+            </div>
+            <div class="img-card col-12 col-lg-8 col-md-4">
+              <div class="img-icons">
+                <img src="flaticon/color-bulb.svg" alt="QkRes_icons">
+              </div>
+            </div>
+            <div class="img-card col-12 col-lg-8 col-md-4">
+              <div class="img-icons">
+                <img src="flaticon/settings.svg" alt="QkRes_icons">
+              </div>
+            </div>
+          </div>
+        </div>
     </div>
   </section>
 
