Commit Message #files modified #main.css

--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
         <div class="d2"</div>
         <div class="d3">
           <div class="title col-lg-12 col-md-12">
-            <h1 class="title-content-2 align-right pb-4">Reach
-            <span> QkRes</span></h1>
+            <h1 class="title-content-2 align-right pb-4">Welcome to<span>
+              <br>QkRes</span></h1>
             <div class="align-left home-section-btn">
                 <a class="btn btn-md btn-primary display-7" href="#">Explore Now</a>
             </div>
@@ -125,22 +125,22 @@
         </div>
         <div class="d4">
           <div class="row main-row">
-            <div class="img-card col-12 col-lg-8 col-md-4">
+            <div class="img-card col-12 col-lg-8 col-md-8">
               <div class="img-icons">
                 <img src="flaticon/machine.svg" alt="QkRes_icons">
               </div>
             </div>
-            <div class="img-card col-12 col-lg-8 col-md-4">
+            <div class="img-card col-12 col-lg-8 col-md-8">
               <div class="img-icons">
                 <img src="flaticon/test1.svg" alt="QkRes_icons">
               </div>
             </div>
-            <div class="img-card col-12 col-lg-8 col-md-4">
+            <div class="img-card col-12 col-lg-8 col-md-8">
               <div class="img-icons">
                 <img src="flaticon/color-bulb.svg" alt="QkRes_icons">
               </div>
             </div>
-            <div class="img-card col-12 col-lg-8 col-md-4">
+            <div class="img-card col-12 col-lg-8 col-md-8">
               <div class="img-icons">
                 <img src="flaticon/settings.svg" alt="QkRes_icons">
               </div>
