--- a/index.html
+++ b/index.html
@@ -109,8 +109,10 @@
     <div class="container-fluid">
         <div class="d1">
           <div class="row main-row">
-            <h1 class="title-content align-left pb-4 display-2"><span>Research
-              <br>Stress ??</span></h1>
+            <div class="col-12 col-lg-12 col-md-12">
+              <h1 class="title-content align-left pb-4 display-2"><span>Research
+                <br>Stress ??</span></h1>
+            </div>
           </div>
         </div>
         <div class="d2"</div>
